Finished most of jekyll step-by-step tutorial

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>{{page.title}}</title>
+    <!-- styles.css is generated from styles.scss -->
+    <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body>
     {% include navigation.html %}
