--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,9 @@
 <nav>
-  <a href="/" {% if page.url == "/" %}style="color: red;"{% endif %}>
-    Home
+  <!-- Iterates over navigation items in navigation data file;
+  each has a name and corresponding link -->
+  {% for item in site.data.navigation %}
+  <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>
+    {{ item.name }}
   </a>
-  <a href="/about.html">About</a>
+  {% endfor %}
 </nav>
