--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8">
     <title>{{page.title}}</title>
     <!-- styles.css is generated from styles.scss -->
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <!-- <link rel="stylesheet" href="/assets/css/styles.css"> -->
+    <link href="../assets/css/style-mozilla.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
   </head>
   <body>
     {% include navigation.html %}
