--- a/assets/css/style-mozilla.css
+++ b/assets/css/style-mozilla.css
@@ -1,12 +1,47 @@
-li, h1 {
-  color: gray;
-  width: 500px;
+html {
+  /* Sets background color and font stuff for the whole page */
+  background-color: #00539F;
+  font-size: 20px;
   font-family: 'Do Hyeon', sans-serif;
+}
+
+body {
+  width: 800px;
+  /* 0 margin on top and bottom; splits margin evenly on left and right */
+  margin: 0 auto;
+  background-color: #60FF80;
+  /* Space around the content */
+  padding: 0 20px 20px 20px;
+  border: 5px solid black;
+}
+
+div {
+  background-color: gray;
+}
+
+h1 {
+  font-size: 60px;
+  text-align: center;
+  margin: 0;
+  padding: 20px 0;
+  color: #00539F;
+  text-shadow: 3px 3px 1px black;
+}
+
+li, p {
+  color: gray;
+  font-size: 25;
+  line-height: 2;
+  letter-spacing: 1px;
   /* border: 1px solid black; */
 }
 
 img {
-  width: 500px;
+  width: 550px;
+  /* Images are inline; to treat them like blocks and thus use margin stuff,
+  we need to this: */
+  display: block;
+  margin: 0 auto;
 }
 
 /* Make red if hovered over */
