finished part 1 HTML firefox

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="{{ page.description }}">
     <title>{{page.title}}</title>
     <!-- styles.css is generated from styles.scss -->
     <!-- <link rel="stylesheet" href="/assets/css/styles.css"> -->
+    <!-- Should be favicon.ico, but I don't wanna spend time right now converting.
+  Also, add facebook & twitter specific stuff to header so website has description there too. -->
+    <link rel="shortcut icon" href="/images/favicon_6.png" type="image/x-icon">
     <link href={{ "../assets/css/style-mozilla.css" | relative_url }} rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -13,5 +17,12 @@
   <body>
     {% include navigation.html %}
     {{ content }}
+
+    <!-- Add footer to every page -->
+    <footer>
+      <p>
+        ©Copyright ???
+      </p>
+    </footer>
   </body>
 </html>
