last commit before creating actual website content in HTML file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,8 @@
     <!-- Should be favicon.ico, but I don't wanna spend time right now converting.
   Also, add facebook & twitter specific stuff to header so website has description there too. -->
     <link rel="shortcut icon" href="/images/favicon_6.png" type="image/x-icon">
-    <link href={{ "../assets/css/style-mozilla.css" | relative_url }} rel="stylesheet">
+    <!-- <link href={{ "../assets/css/style-mozilla.css" | relative_url }} rel="stylesheet"> -->
+    <link rel="stylesheet" href="{{ "../assets/css/style.css" | relative_url}}"
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
