--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,5 @@
-<nav>
+
+<nav class="nav-bar">
   <!-- Iterates over navigation items in navigation data file;
   each has a name and corresponding link -->
   <ul>
@@ -6,7 +7,7 @@
     <li>
       <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>
         {{ item.name }}
-      </a>      
+      </a>
     </li>
     {% endfor %}
   </ul>
