--- a/assets/css/style-mozilla.css
+++ b/assets/css/style-mozilla.css
@@ -36,7 +36,7 @@ li, p {
   /* border: 1px solid black; */
 }
 
-img {
+img#image {
   width: 550px;
   /* Images are inline; to treat them like blocks and thus use margin stuff,
   we need to this: */
@@ -59,12 +59,18 @@ button {
 }
 
 blockquote p {
-  color: blue;
+  background-image: url("https://intranet.law.wustl.edu/wp-content/uploads/2019/01/AMartin-300-x-300.jpg");
+  color: green;
 }
 
 nav li {
   display: inline;
 }
+
+/* nav {
+  background-color: green;
+  padding: 20px auto;
+} */
 /* nav ul {
   list-style-type: none;
 }
