--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,7 @@
     <!-- <link href={{ "../assets/css/style-mozilla.css" | relative_url }} rel="stylesheet"> -->
     <link rel="stylesheet" href="{{ "../assets/css/style.css" | relative_url}}"
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     {% include navigation.html %}
