--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 html {
   background-color: #bfbfbf;
+  font-size: 18px;
+  font-family: 'Merriweather', serif;
 }
 
 body {
@@ -9,27 +11,77 @@ body {
   background-color: #d9fffd; /* Select off-white color */
 }
 
+img {
+  width: 40%;
+  display: block;
+  margin: 0 auto;
+}
+
+/* Make title in center and put padding below text */
 h1 {
   text-align: center;
+  padding-bottom: 50px;
+}
+
+/* Put padding above footer */
+footer {
+  padding-top: 50px;
+}
+
+nav.nav-bar {
+  border-bottom: 1px solid black;
 }
 
 .nav-bar ul {
   list-style-type: none;
-  border: 5px solid black;
-  background-color: gray;
+  /* border: 5px solid black; */
+  /* background-color: gray; */
   padding: 0px auto;
-  text-align: center;
+  /* text-align: right; */
 }
+
+
+/* put site name in navigation bar on left */
+#site-name {
+  float: left;
+  margin-right: 20px;
+}
+
+#site-logo {
+  display: block;
+  float: left;
+  width: 75px;
+  margin-top: -20px;
+  margin-right: 30px;
+}
+
+/* style search bar */
+#search-bar {
+  /* float: left; */
+  /* padding-right: 0; */
+}
+
+/* .nav-static-elements {
+  float: left;
+}
+
+.nav-elements {
+  float: right;
+} */
 
 .nav-bar ul li {
   display: inline;
-  margin: auto 5%;
+  margin: auto 2.5%;
 }
 
-li a {
+.nav-bar li a {
   text-decoration: none;
+  color: black;
+  padding: 10px 20px;
+  /* border: 2px solid green; */
 }
 
+/* When hovering over block, highlight whole thing */
 li a:hover {
-  color: orange;
+  background-color: gray;
 }
