--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,54 +32,42 @@ nav.nav-bar {
   border-bottom: 1px solid black;
 }
 
-.nav-bar ul {
-  list-style-type: none;
-  /* border: 5px solid black; */
-  /* background-color: gray; */
-  padding: 0px auto;
-  /* text-align: right; */
+#site-logo {
+  display: inline;
+  width: 70px;
 }
 
-
-/* put site name in navigation bar on left */
 #site-name {
   float: left;
+  margin-right: 0px;
+}
+
+#search-bar {
+  width: 250px;
+  height: 30px;
+}
+
+.nav-static-elements img {
+  float: left;
+  margin-top: -25px;
   margin-right: 20px;
 }
 
-#site-logo {
-  display: block;
-  float: left;
-  width: 75px;
-  margin-top: -20px;
-  margin-right: 30px;
-}
+.nav-elements li a {
 
-/* style search bar */
-#search-bar {
-  /* float: left; */
-  /* padding-right: 0; */
 }
-
-/* .nav-static-elements {
-  float: left;
-}
-
-.nav-elements {
-  float: right;
-} */
 
 .nav-bar ul li {
   display: inline;
-  margin: auto 2.5%;
+  margin: auto 40px; /*controls distance between nav-links*/
 }
 
-.nav-bar li a {
+.nav-bar ul li a {
   text-decoration: none;
   color: black;
-  padding: 10px 20px;
-  /* border: 2px solid green; */
+  padding: 15px;
 }
+
 
 /* When hovering over block, highlight whole thing */
 li a:hover {
