--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h1>{{ page.title }}</h1>
 <p>
-  {{ page.date | date_to_string }}
+  <time datetime="{{ page.date }}">{{ page.date | date_to_string }}</time>
   {% assign creator = site.creators | where: 'name', page.creator | first %}
   {% if creator %}
     - <a href="{{ creator.url }}">{{ creator.name }}</a>
