--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,13 +23,29 @@ h1 {
   padding-bottom: 50px;
 }
 
-/* Put padding above footer */
-footer {
-  padding-top: 50px;
+/* HOW TO GET TO WORK??? */
+time {
+  text-align: center
 }
 
+/* Put padding above footer and put a bit of space on left before footer*/
+footer {
+  padding-top: 50px;
+  font-size: 12px;
+  margin-left: 10px;
+}
+
+/* Make preview list in blog.html shifted by changing margins */
+.shifted {
+  margin-left: 40px;
+  font-size: 14px;
+}
+
+/* Nav-bar settings */
 nav.nav-bar {
   border-bottom: 1px solid black;
+  background-color: #f5fafa;
+  padding-top: 15px;
 }
 
 #site-logo {
