--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-<p>
+<p class="author-date">
   <time datetime="{{ page.date }}">{{ page.date | date_to_string }}</time>
   {% assign creator = site.creators | where: 'name', page.creator | first %}
   {% if creator %}
