--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,12 +2,15 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-<p class="author-date">
-  <time datetime="{{ page.date }}">{{ page.date | date_to_string }}</time>
-  {% assign creator = site.creators | where: 'name', page.creator | first %}
-  {% if creator %}
-    - <a href="{{ creator.url }}">{{ creator.name }}</a>
-  {% endif %}
-</p>
+<div class="post-top">
+  <p class="author-date">
+    Written on
+    <time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time>
+    {% assign creator = site.creators | where: 'name', page.creator | first %}
+    {% if creator %}
+      by <a href="{{ creator.url }}">{{ creator.name }}</a>
+    {% endif %}
+  </p>
+</div>
 
 {{ content }}
