--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{{ "../assets/css/style.css" | relative_url}}"
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
   </head>
   <body>
     {% include navigation.html %}
@@ -21,7 +22,7 @@
     <!-- Add footer to every page -->
     <footer>
       <p>
-        ©Copyright ???
+        ©Copyright Nick, {{ site.time | date: "%Y"}}
       </p>
     </footer>
   </body>
