fixed formatting a bit
Also ran batch file (at 11pm, not 3pm though)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ figcaption {
 }
 
 /* Make title in center and put padding below text */
-h1, h2, h3, h4 {
+h1, h2, h3 {
   text-align: center;
 }
 
