finished podcast post

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -24,7 +24,7 @@
     <li class="search-bar">
       <!-- Search -->
       <!-- <button>Search</button> -->
-      <input class="search-bar" type="search" placeholder="Search" name="q">
+      <!-- <input class="search-bar" type="search" placeholder="Search" name="q"> -->
     </li>
   </ul>
 </nav>
