--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="{{ page.description }}">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>{{page.title}}</title>
     <!-- styles.css is generated from styles.scss -->
     <!-- <link rel="stylesheet" href="/assets/css/styles.css"> -->
@@ -22,7 +23,7 @@
     <!-- Add footer to every page -->
     <footer>
       <p>
-        ©Copyright Nick, {{ site.time | date: "%Y"}}
+        ©Copyright Nick Crispino, {{ site.time | date: "%Y"}}
       </p>
     </footer>
   </body>
