--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <!-- Should be favicon.ico, but I don't wanna spend time right now converting.
   Also, add facebook & twitter specific stuff to header so website has description there too. -->
     <link rel="shortcut icon" href="/images/poss_logo_1.png" type="image/x-icon">
+    <link href="..\assets\css\minimal-table.css" rel="stylesheet" type="text/css">
     <!-- <link href={{ "../assets/css/style-mozilla.css" | relative_url }} rel="stylesheet"> -->
     <link rel="stylesheet" href="{{ "../assets/css/style.css" | relative_url}}"
     <link rel="preconnect" href="https://fonts.gstatic.com">
