Added plotly interactive graphs
Also added podcast lists on hover for today's graph

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,9 @@
   </head>
   <body>
     {% include navigation.html %}
-    {{ content }}
+    <div class="content">
+      {{ content }}
+    </div>
 
     <!-- Add footer to every page -->
     <footer>
