changed up homepage and fixed plotly

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 
-<nav class="nav-bar">
+<nav class="nav-bar" id="nav-bar">
   <!-- <span id="site-name">ncrispino</span> -->
   <!-- Iterates over navigation items in navigation data file;
   each has a name and corresponding link -->
