--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
 
     <!-- Add footer to every page -->
     <footer>
+      <a href="#nav-bar">Back to top</a>
       <p>
         ©Copyright Nick Crispino, {{ site.time | date: "%Y"}}
       </p>
