final changes before deleting a bunch of stuff and playing around

--- a/assets/css/style-mozilla.css
+++ b/assets/css/style-mozilla.css
@@ -1,6 +1,6 @@
-html {
+/* html {
   /* Sets background color and font stuff for the whole page */
-  background-color: #00539F;
+  background-color: 00539F;
   font-size: 20px;
   font-family: 'Do Hyeon', sans-serif;
 }
@@ -83,4 +83,4 @@ nav li {
 
 nav li a {
   padding: 10px 10px;
-} */
+} */ */
