--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,9 @@
     <link rel="shortcut icon" href="/images/poss_logo_1.png" type="image/x-icon">
     <link href="..\assets\css\minimal-table.css" rel="stylesheet" type="text/css">
     <!-- <link href={{ "../assets/css/style-mozilla.css" | relative_url }} rel="stylesheet"> -->
-    <link rel="stylesheet" href="{{ "../assets/css/style.css" | relative_url}}"
+    <!-- <link rel="stylesheet" href="{{ "../assets/css/style.css" | relative_url}}" -->
+    <!-- <link rel="stylesheet" href="{{ "../assets/css/basic_css.css" | relative_url}}" -->
+    <link rel="stylesheet" href="{{ "../assets/css/css_grid.css" | relative_url}}"
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
